--- a/BankingSystemAPI.Services/BankingSystemAPI.Services.csproj
+++ b/BankingSystemAPI.Services/BankingSystemAPI.Services.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\BankingSystemAPI.Data\BankingSystemAPI.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="UAParser" Version="3.1.47" />
+    </ItemGroup>
+
 </Project>
